--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "misskey",
 	"author": "syuilo <i@syuilo.com>",
-	"version": "10.87.3",
+	"version": "10.87.3-h3zjp",
 	"codename": "nighthike",
 	"repository": {
 		"type": "git",
