--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
 	"name": "misskey",
 	"author": "syuilo <i@syuilo.com>",
-<<<<<<< HEAD
-	"version": "10.91.2-h3zjpv1",
-=======
-	"version": "10.92.0",
->>>>>>> upstream/develop
+	"version": "10.92.0-h3zjp",
 	"codename": "nighthike",
 	"repository": {
 		"type": "git",
