--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "misskey",
 	"author": "syuilo <i@syuilo.com>",
-	"version": "10.92.0-h3zjp",
+	"version": "10.92.0-h3zjpv1",
 	"codename": "nighthike",
 	"repository": {
 		"type": "git",
